[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Player/GUI/PauseMenu.png" type="Texture" id=1]
[ext_resource path="res://GUI/Fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/Fonts/ButtonStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/Menu/Change.wav" type="AudioStream" id=5]
[ext_resource path="res://Menu/esc2.png" type="Texture" id=6]
[ext_resource path="res://Menu/esc1.png" type="Texture" id=7]
[ext_resource path="res://Assets/map/Map.png" type="Texture" id=8]
[ext_resource path="res://Assets/map/PlayerIndex.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.137255, 0.137255, 0.137255, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.133333, 0.160784, 0.262745, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.458824, 0.494118, 0.603922, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/styles/disabled = SubResource( 8 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = ExtResource( 3 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="Theme" id=2]

[sub_resource type="Animation" id=10]
resource_name = "Map"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("map:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Pause"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("map:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("map:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
script = ExtResource( 4 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 0.909804 )

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 635, 362 )
scale = Vector2( 0.768817, 0.82 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 545.0
margin_top = 198.0
margin_right = 735.0
margin_bottom = 522.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_right = 190.0
margin_bottom = 64.0
theme = SubResource( 2 )
text = "Paused"
align = 1

[node name="Control" type="Control" parent="Menu/VBoxContainer"]
margin_top = 68.0
margin_right = 190.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 10 )

[node name="Resume" type="Button" parent="Menu/VBoxContainer"]
margin_top = 82.0
margin_right = 190.0
margin_bottom = 160.0
rect_min_size = Vector2( 75, 0 )
text = "Resume"

[node name="Map" type="Button" parent="Menu/VBoxContainer"]
margin_top = 164.0
margin_right = 190.0
margin_bottom = 242.0
rect_min_size = Vector2( 75, 0 )
disabled = true
text = "Map"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 246.0
margin_right = 190.0
margin_bottom = 324.0
rect_min_size = Vector2( 75, 0 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Map = SubResource( 10 )
anims/Pause = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="map" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="map"]
position = Vector2( 134, 86 )
texture = ExtResource( 8 )
centered = false

[node name="Label" type="AnimatedSprite" parent="map"]
position = Vector2( 1195, 670 )
scale = Vector2( 7, 7 )
frames = SubResource( 9 )
playing = true

[node name="player" type="Sprite" parent="map"]
position = Vector2( 680, 255 )
texture = ExtResource( 9 )

[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Map" to="." method="_on_Map_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
